--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "tomjowen/tomjowen.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   name             : "About Me"
   pronouns         : # example: "she/her"  
   bio              : "Third year at the University of Oxford, studying Engineering Science"
