--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "tom-owen-091a202bb"
+  linkedin         : "tomjowen"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
